--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.0",
         "express": "^5.0.0",
-        "jsonwebtoken": "^9.0.0"
+        "jsonwebtoken": "^9.0.0",
+        "resend": "^6.9.2"
     },
     "devDependencies": {
         "prisma": "^6.0.0"
